Fix text alignment.

--- a/app/modules/webex/siteSettings/_sitesettings.scss
+++ b/app/modules/webex/siteSettings/_sitesettings.scss
@@ -33,13 +33,10 @@
         }
         &.right-side {
             width: 67%;
+            display: flex;
+            flex-direction: column;
             @include vr-spacing(pv, 1.5);
             @include vr-spacing(ph, 1);
-            .configure-content {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-around;
-            }
             .overview-title {
                 color: $brand-primary;
                 font-family: $brand-font-light;
@@ -47,28 +44,26 @@
             .overview-count {
                 @include vr-spacing(pt, 1);
                 font-size: rem(48);
-                font-family: $brand-font-thin;
                 line-height: 1;
                 color: $brand-info;
-            }
-            .overview-icon {
-                @include vr-spacing(pt, 1);
                 display: flex;
                 flex-direction: column;
-                i {
-                    font-size: rem(48);
+            }
+            i {
+                @include vr-spacing(pt, 1);
+                font-size: rem(48);
+                line-height: 1;
+                display: flex;
+                flex-direction: column;
+                cursor: pointer;
+                color: $text-color;
+                &:hover {
+                  color: $anchor-font-color-hover;
                 }
             }
             .overview-label {
                 color: $gray;
             }
-            i {
-       			cursor: pointer;
-        		color: $text-color;
-       			&:hover {
-          			color: $anchor-font-color-hover;
-        		}
-        	}
         }
     }
 }
